# xp

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  PRODUCT.md  README.md  build.rs  commitlint.config.cjs  dprint.json  lefthook.yml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/scripts/: compute-version.sh  release-intent.sh  test-compute-version.sh
.github/workflows/: ci.yml  label-gate.yml  notify-release-failure.yml  release.yml  xray-e2e.yml
deploy/docker/: compose.bootstrap.yml  compose.join.yml
docs/desgin/: README.md  api.md  architecture.md  cluster.md  quality.md  quota.md  requirements.md  subscription.md  tech-selection.md  workflows.md  xray.md
docs/ops/: README.md  cloudflare-tunnel.md  docker-deployment-guide.md  docker.md  endpoint-probe.md
docs/plan/: README.md  m1-control-plane-foundation.md  m2-xray-controller-reconcile.md  m3-subscription-output.md  m4-quota-system.md  m5-quota-raft-consistency.md  m5-raft-cluster.md  m6-web-panel.md  m7-quality-gates-delivery.md
docs/security/: github-sensitive-data-cleanup.md
docs/specs/: README.md
proto/xray/: UPSTREAM.txt
scripts/: check-style-budget.py  generate-web-icons.sh  install-from-github.sh  mihomo-redact.sh  start-backend.sh  start-frontend.sh  style-budget-baseline.json
scripts/dev/: seed-m6-demo-data.js
scripts/e2e/: docker-compose.xray.yml  run-local-xray-e2e.sh  xray-config.json
scripts/testbox/: run-shared-quota-xray-e2e.sh
src/: admin_token.rs  cloudflared_supervisor.rs  cluster_identity.rs  cluster_metadata.rs  cluster_settings.rs  config.rs  control_plane_mesh.rs  credentials.rs  cycle.rs  ddns.rs  endpoint_probe.rs  id.rs  inbound_ip_usage.rs  internal_auth.rs  ip_geo_db.rs  lib.rs  login_token.rs  main.rs  managed_default_endpoints.rs  mihomo_redact.rs  node_egress_probe.rs  node_history.rs  node_runtime.rs  openrc_process.rs  protocol.rs  public_ip_probe.rs  quota.rs  quota_policy.rs  reconcile.rs  state.rs  subscription.rs  tcp_connection_usage.rs  version.rs  vless_https_canary.rs  xray_supervisor.rs
src/domain/: mod.rs
src/http/: mod.rs  tests.rs  web_assets.rs
src/inbound_ip_usage/: tests.rs
src/managed_default_endpoints/: tests.rs
src/mihomo_redact/: tests.rs
src/ops/: admin_token.rs  admin_token_tests.rs  cli.rs  cloudflare.rs  container.rs  deploy.rs  init.rs  install.rs  mihomo.rs  mod.rs  paths.rs  platform.rs  preflight.rs  status.rs  tui.rs  upgrade.rs  util.rs  xp.rs  xp_env.rs
src/quota/: tests.rs
src/raft/: README.md  app.rs  http_rpc.rs  mod.rs  network.rs  network_http.rs  node.rs  (+2 more)
tests/: forwarding_raft_facade_forwarding.rs  raft_replication_smoke.rs  shared_quota_xray_e2e.rs  xp_ops_smoke.rs  xp_ops_upgrade.rs  xray_e2e.rs
web/: .gitignore  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.storybook.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+462 files in other folders)
