[package]
name = "xp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
prost = "0.14"
rand = "0.8"
rcgen = { version = "0.14", features = ["x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
time = { version = "0.3", default-features = false, features = ["std"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = "1.2.1"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
pretty_assertions = "1.4"
shadowsocks = { version = "1.24.0", default-features = false, features = ["aead-cipher-2022"] }
tempfile = "3.23.0"
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.5", features = ["util"] }
x509-parser = "0.18"
